feat(components): added form and accordion to default components

--- a/components.json
+++ b/components.json
@@ -31,11 +31,13 @@
     "card",
     "modal",
     "tooltip",
-    "dropdown"
+    "dropdown",
+    "form",
+    "accordion"
   ],
   "configurations": {
     "enableStrictMode": true,
     "autoImport": true,
     "treeShaking": true
-  }   
+  }
 }
