chore(config): enable shadcn CLI logging for debugging

--- a/components.json
+++ b/components.json
@@ -38,6 +38,7 @@
   "configurations": {
     "enableStrictMode": true,
     "autoImport": true,
-    "treeShaking": true
+    "treeShaking": true,
+    "showLogs": true
   }
 }
