feat(ui): added input, badge, and tabs components to default list

--- a/components.json
+++ b/components.json
@@ -33,7 +33,10 @@
     "tooltip",
     "dropdown",
     "form",
-    "accordion"
+    "accordion",
+    "input",
+    "badge",
+    "tabs"
   ],
   "configurations": {
     "enableStrictMode": true,
